plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.gym'
version = '0.0.1-SNAPSHOT'
description = 'crm-spring-boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-liquibase'
    implementation 'org.springframework.boot:spring-boot-starter-web:4.1.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-liquibase-test'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test:4.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc:4.1.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:4.1.0'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.aspectj:aspectjweaver:1.9.25.1'
    implementation 'org.mapstruct:mapstruct:1.6.2'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    implementation 'jakarta.validation:jakarta.validation-api:4.0.0-M1'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:4.1.0'
    implementation 'io.micrometer:micrometer-registry-prometheus:1.17.0'
    implementation 'org.springframework.boot:spring-boot-starter-security:4.1.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
